# derckards-image-reader

./: README.md  pyproject.toml
src/: main.py
src/libs/: const.py  utils.py
